# noahs-rust-workshop-notes

lecturer_notes/: Cargo.toml
lecturer_notes/src/: error_handling.rs  functions.rs  macros.rs  main.rs  math_and_logic_operators.rs  rust_basics.rs  statements_expressions.rs  structs.rs  tuples_arrays.rs  vectors.rs
student_notes/src/: data_types.rs  main.rs  rust_basics.rs  rust_nuances.rs
student_notes/src/examples/: lemonade_stand.rs
