[package]
name = "noraas_notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
web-view = "0.7.3"
image = "0.23.14"
cairo-rs = "0.17.10"
glib = "0.17.10"
cairo = "0.0.4"
gio = "0.17.10"
